--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Jake Tober"
   },
   "scripts": {
-    "build": "run-s clean:* tsc jest fixImports copyResult",
+    "build": "run-s clean:* tsc jest copyResult fixImports",
     "clean:lib": "del-cli lib/*",
     "clean:bin": "del-cli bin/*",
     "test": "run-s clean:bin tsc jest",
@@ -20,6 +20,7 @@
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.16.8",
+    "@tobes31415/basic-observables": "^1.0.2",
     "@tobes31415/dispose": "^4.0.1",
     "typescript": "^4.5.4"
   },
